# reminder_bot

./: .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  sqlite3.db
alembic/: env.py
alembic/versions/: 21876f939243_создала_новое_поле_для_напоминаний.py  23cc0cd5af2e_удалила_not_null.py  454af05e1b8d_поменяла_вторичный_ключ_у_owner_id.py  5ecef6a0a6d9_поменяла_пути.py  89a022cb6112_.py  aabaeceba6a7_first_migration.py
kernel/: .env.example  Dockerfile  constants.py  db.dbml  main.py  sqlite3.db
kernel/commands/: __init__.py  help_start.py  newrem.py  start.py
kernel/models/: __init__.py  users.py
kernel/services/: __init__.py  delrem.py  engine.py  engine_service.py  listrem.py  newrem.py  redis.service.py  redis_service.py  start.py
telegram_bots/: .gitignore  constants.py  main.py
telegram_bots/commands/: help_start.py  newrem.py
telegram_bots/services/: db.py
